fix: fix returning thumbnailsrc bug